# yaoyao-skills

./: .gitignore  CHANGELOG.md  README.md
skills/changelog/: SKILL.md
skills/git-workflow/: SKILL.md
skills/git-workflow/references/: commit.md  issue.md  pull_request.md  tag.md
skills/github-actions/: SKILL.md
skills/github-actions/assets/: app-release.yml  ci.yml  docker-release.yml  tauri-release.yml
skills/github-actions/assets/docker/: .env.example  docker-compose.yaml
skills/github-actions/assets/docker/client/: package.json  svelte.config.js
skills/github-actions/assets/docker/scripts/: copy_assets.py
skills/github-actions/assets/docker/server/: .dockerignore  Cargo.toml
skills/github-actions/template/docker/: Cargo.toml  justfile
skills/github-actions/template/docker/client/: .dockerignore  Dockerfile
skills/github-actions/template/docker/pingap/conf/: example.conf
skills/github-actions/template/docker/server/: Dockerfile
skills/project-docs/: SKILL.md
skills/project-docs/agents/: openai.yaml
skills/project-workflow/: SKILL.md
skills/project-workflow/agents/: openai.yaml
skills/project-workflow/references/: commit.md  implementation-subagent-flow.md  main-agent-flow.md  review-subagent-flow.md  subagent-flow.md  task-format.md  workspace-layout.md
skills/rust-architecture/: SKILL.md
skills/rust-architecture/agents/: openai.yaml
skills/rust-architecture/references/: layouts.md
